<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="vertical"
    android:id="@+id/item_main_layout"
    android:layout_rowSpan="6"
    android:layout_marginBottom="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/note_title_hint"
        android:layout_weight="3"
        android:text="@string/note_title_dummy"
        android:textSize="22sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/note_body_hint"
            android:text="@string/note_body_dummy"
            android:ellipsize="end"
            android:maxLines="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/note_date"
            android:text="@string/note_date_dummy"
            android:textAlignment="viewEnd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/footer_layout">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_menu_send"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_menu_camera"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_menu_gallery"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_menu_slideshow"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_menu_share"/>
    </LinearLayout>
</LinearLayout>